--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -123,3 +123,12 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
   volume       = {abs/2306.13831},
   year         = {2023},
 }
+
+@article{lu2022discovered,
+    title={Discovered policy optimisation},
+    author={Lu, Chris and Kuba, Jakub and Letcher, Alistair and Metz, Luke and Schroeder de Witt, Christian and Foerster, Jakob},
+    journal={Advances in Neural Information Processing Systems},
+    volume={35},
+    pages={16455--16468},
+    year={2022}
+}
